# Digital_Challenge_UB-creators_13_15_30

./: CMakeLists.txt  README.md
src/: format.sh  log_vizualizer.html  main.cc  utils.h
src/ELK/: Dockerfile  compose.yaml  logstash.conf  readme.md
src/ELK/filebeat/: Dockerfile  filebeat.yml
src/logger/: logger.cc  logger.h
src/server/: server.cc  server.h
